# Chess_Rating

backend/: pyproject.toml
backend/app/: config.py  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/component/: Card.js  Home.js  MainHeader.js  NotFound.js
frontend/src/form/: Forgot.js  Login.js  Register.js
