[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Muskan-1003 <Muskanpandey1003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
SQLAlchemy = "^1.4.41"
sqlmodel = "^0.0.8"
asyncpg = "^0.26.0"
psycopg2 = "^2.9.4"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start= "app.main:start"
